[gd_scene load_steps=16 format=3 uid="uid://cqeai7aw74e46"]

[ext_resource type="Script" path="res://scenes/4_Bubblegum/bubblegum.gd" id="1_e5ak1"]
[ext_resource type="Texture2D" uid="uid://dlh1h43kwbc0c" path="res://assets/4/4_fondo.png" id="2_ji1yq"]
[ext_resource type="Texture2D" uid="uid://dsb3m38ly1huh" path="res://assets/4/4_demonia.png" id="3_v6iwr"]
[ext_resource type="Texture2D" uid="uid://5unrcwi0loml" path="res://assets/4/5.png" id="4_f7j8y"]
[ext_resource type="Texture2D" uid="uid://b0fc1tg2kxlwt" path="res://assets/4/6.png" id="5_8l2pp"]
[ext_resource type="Texture2D" uid="uid://jx0e1p5dxnn2" path="res://assets/4/7.png" id="6_0s0rd"]
[ext_resource type="Texture2D" uid="uid://b1rm8howhfa2f" path="res://assets/4/8.png" id="7_j6b4m"]
[ext_resource type="Texture2D" uid="uid://cxb6e6d5aujs8" path="res://assets/4/9.png" id="8_sbacy"]
[ext_resource type="Texture2D" uid="uid://cd313bdliorxa" path="res://assets/4/10.png" id="9_tda86"]
[ext_resource type="Texture2D" uid="uid://groh50h84wfs" path="res://assets/4/11.png" id="10_bqod0"]
[ext_resource type="Texture2D" uid="uid://di6r5gokl32sy" path="res://assets/4/12.png" id="11_30jrg"]
[ext_resource type="Texture2D" uid="uid://oni5v4hbke45" path="res://assets/4/13.png" id="12_8uvxf"]

[sub_resource type="Animation" id="Animation_kty0v"]
resource_name = "Chew"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 1.03333, 4.66667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 0, 1, 0, 2, 3, 3]
}

[sub_resource type="Animation" id="Animation_13uxc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qxsbb"]
_data = {
"Chew": SubResource("Animation_kty0v"),
"RESET": SubResource("Animation_13uxc")
}

[node name="Bubblegum" type="Node2D"]
script = ExtResource("1_e5ak1")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ChewTimer" type="Timer" parent="."]

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_ji1yq")

[node name="Demonia" type="Sprite2D" parent="."]
texture = ExtResource("3_v6iwr")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="Demonia"]
libraries = {
"": SubResource("AnimationLibrary_qxsbb")
}

[node name="SpritesChicle" type="Node2D" parent="."]
scale = Vector2(0.587809, 0.587809)

[node name="Chicle1" type="Sprite2D" parent="SpritesChicle"]
visible = false
texture = ExtResource("4_f7j8y")

[node name="Chicle2" type="Sprite2D" parent="SpritesChicle"]
visible = false
texture = ExtResource("5_8l2pp")

[node name="Chicle3" type="Sprite2D" parent="SpritesChicle"]
visible = false
texture = ExtResource("6_0s0rd")

[node name="Chicle4" type="Sprite2D" parent="SpritesChicle"]
visible = false
texture = ExtResource("7_j6b4m")

[node name="Chicle5" type="Sprite2D" parent="SpritesChicle"]
visible = false
texture = ExtResource("8_sbacy")

[node name="Chicle6" type="Sprite2D" parent="SpritesChicle"]
visible = false
texture = ExtResource("9_tda86")

[node name="Chicle7" type="Sprite2D" parent="SpritesChicle"]
visible = false
texture = ExtResource("10_bqod0")

[node name="Chicle8" type="Sprite2D" parent="SpritesChicle"]
visible = false
texture = ExtResource("11_30jrg")

[node name="Chicle9" type="Sprite2D" parent="SpritesChicle"]
visible = false
texture = ExtResource("12_8uvxf")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ChewTimer" to="." method="_on_chew_timer_timeout"]
